# calculus

./: CMakeLists.txt
include/: affichage.h  calcul.h  read_file.h  read_key.h
src/: affichage.c  calcul.c  main.c  read_file.c  read_key.c
